src/component/VideoCard/_video-card.scss
.video-card {
  width: min(90vw, 300px);

  .thumbnail {
    background-color: black;
  }

  .video-views::after {
    content: "•";
    margin-left: 4px;
    margin-right: 4px;
  }

  .channel-image {
    width: 40px;
    height: 40px;
  }

  .video-title {
    font-size: 1rem;
  }
}

@media screen and (min-width: 48em) {
  .video-card {
    .video-title {
      font-size: 0.875rem;
    }
  }
}

